--- a/app/src/main/res/layout/activity_choose_options_for_booking.xml
+++ b/app/src/main/res/layout/activity_choose_options_for_booking.xml
@@ -55,7 +55,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/book_plane_seats_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:background="@drawable/recycler_rounded_corner"/>
 
             <TextView
                 android:id="@+id/book_housing_rooms_title"
@@ -63,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/book_housing_rooms_title"
                 android:textSize="20sp"
+                android:layout_marginTop="5sp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textColor="#000000"/>
@@ -70,21 +73,26 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/book_housing_rooms_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@drawable/recycler_rounded_corner"
+                android:layout_marginTop="5sp"/>
 
             <TextView
                 android:id="@+id/book_paying_activities_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/book_paying_activities_title"
+                android:layout_marginTop="5sp"
                 android:textSize="20sp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textColor="#000000"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/book_paying_activities_rv"
+                android:layout_marginTop="5sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@drawable/recycler_rounded_corner"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
