--- a/app/src/main/res/layout/activity_my_preferences.xml
+++ b/app/src/main/res/layout/activity_my_preferences.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activity.MyPreferences"
     android:weightSum="100"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <androidx.core.widget.NestedScrollView
+    android:orientation="vertical">
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="92">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/pack_display_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </androidx.core.widget.NestedScrollView>
-
+        android:layout_weight="92"
+        android:text="My preferences"
+        android:textSize="30sp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
@@ -26,4 +24,5 @@
         android:background="@color/white"
         app:itemIconTint="@color/secondaryColor"
         app:menu="@menu/navbar_menu"/>
+
 </LinearLayout>
