--- a/app/src/main/res/layout/activity_pack_details.xml
+++ b/app/src/main/res/layout/activity_pack_details.xml
@@ -6,94 +6,113 @@
     android:layout_height="match_parent"
     tools:context=".activity.PackDetails">
 
-    <TextView
-        android:id="@+id/pack_details_pack_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="@string/pack_name"
-        android:textSize="20sp"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/text_title"/>
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8sp"
-        app:layout_constraintTop_toBottomOf="@+id/pack_details_pack_name">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="100">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/pack_details_scrollview_constraint_layout"
+        <TextView
+            android:id="@+id/pack_details_pack_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/pack_details_pack_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/pack_description"
-                app:layout_constraintTop_toTopOf="parent"
-                android:textColor="@color/text_color"/>
-
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:fontFamily="@font/acme"
+            android:gravity="center"
+            android:text="@string/pack_name"
+            android:textColor="@color/text_title"
+            android:textSize="20sp" />
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="84" >
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/pack_details_fragment_container"
+                android:id="@+id/pack_details_scrollview_constraint_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/pack_details_show_flights_fragment">
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/pack_details_pack_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pack_description"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textSize="15sp"
+                    android:textColor="@color/text_color"
+                    android:padding="5sp"
+                    android:layout_marginStart="12sp"
+                    android:layout_marginEnd="12sp"
+                    android:background="@drawable/activity_item_rounded_corner"/>
 
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/pack_details_fragment_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/pack_details_show_flights_fragment">
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <Button
+                    android:id="@+id/pack_details_show_accommodations_fragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginTop="12dp"
+                    android:text="@string/pack_details_show_accommodations_fragment"
+                    android:textSize="12sp"
+                    android:textColor="@color/text_color"
+                    app:layout_constraintStart_toEndOf="@+id/pack_details_show_flights_fragment"
+                    app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
+
+                <Button
+                    android:id="@+id/pack_details_show_activity_fragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="@string/pack_details_show_activity_fragment"
+                    android:textSize="12sp"
+                    android:textColor="@color/text_color"
+                    app:layout_constraintEnd_toStartOf="@+id/pack_details_show_flights_fragment"
+                    app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
+
+                <Button
+                    android:id="@+id/pack_details_show_flights_fragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:gravity="center"
+                    android:text="@string/pack_details_show_flights_fragment"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
+
+                <Button
+                    android:id="@+id/pack_details_book_this_pack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/book_this_pack_button"
+                    android:textColor="@color/text_color"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/pack_details_fragment_container"
+                    android:layout_marginBottom="20sp"
+                    android:layout_marginTop="8sp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <Button
-                android:id="@+id/pack_details_show_accommodations_fragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="12dp"
-                android:text="@string/pack_details_show_accommodations_fragment"
-                android:textSize="12sp"
-                android:textColor="@color/text_color"
-                app:layout_constraintStart_toEndOf="@+id/pack_details_show_flights_fragment"
-                app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
-
-            <Button
-                android:id="@+id/pack_details_show_activity_fragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:text="@string/pack_details_show_activity_fragment"
-                android:textSize="12sp"
-                android:textColor="@color/text_color"
-                app:layout_constraintEnd_toStartOf="@+id/pack_details_show_flights_fragment"
-                app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
-
-            <Button
-                android:id="@+id/pack_details_show_flights_fragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:gravity="center"
-                android:text="@string/pack_details_show_flights_fragment"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
-
-            <Button
-                android:id="@+id/pack_details_book_this_pack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/book_this_pack_button"
-                android:textColor="@color/text_color"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/pack_details_fragment_container"
-                android:layout_marginBottom="50sp"
-                android:layout_marginTop="8sp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:paddingTop="8sp"
+            android:id="@+id/bottom_navigation"
+            android:background="@color/white"
+            app:itemIconTint="@color/secondaryColor"
+            app:menu="@menu/navbar_menu" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
