--- a/app/src/main/res/layout/display_pack_recyclerview.xml
+++ b/app/src/main/res/layout/display_pack_recyclerview.xml
@@ -16,15 +16,16 @@
         android:background="@drawable/rounded_corner" />
 
     <TextView
-        android:padding="8sp"
         android:id="@+id/pack_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="@color/text_title"
-        android:text="@string/pack_name"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/galada"
+        android:gravity="center"
+        android:padding="8sp"
+        android:text="@string/pack_name"
+        android:textColor="@color/text_title"
+        android:textSize="24sp" />
 </LinearLayout>
