--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="text_info">#66757F</color>
     <color name="border_color">#66757F</color>
     <color name="button_background_color">#55ACEE</color>
+    <color name="white">#FFFFFF</color>
 </resources>
