--- a/app/src/main/res/layout/accommodation_recyclerview.xml
+++ b/app/src/main/res/layout/accommodation_recyclerview.xml
@@ -6,38 +6,45 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/activity_item_rounded_corner"
-    android:layout_margin="12sp">
+    android:layout_margin="12sp"
+    android:paddingBottom="20sp">
     <ImageView
         android:id="@+id/accommodation_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="180dp"
+        android:layout_height="180sp"
         android:layout_gravity="center"
         tools:srcCompat="@tools:sample/avatars"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="2sp"
-        android:layout_marginEnd="5sp"/>
+        android:layout_marginEnd="5sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/accommodation_name"
-        android:layout_width="wrap_content"
-        android:maxWidth="220sp"
+        android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="15sp"
         android:layout_marginStart="8sp"
+        android:layout_marginEnd="8sp"
         android:text="@string/accommodation_name"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/accommodation_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/accommodation_description"
-        android:layout_width="230sp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60sp"
+        android:gravity="center"
+        android:layout_marginTop="30sp"
         android:textSize="18sp"
-        android:layout_marginStart="12sp"
+        android:layout_marginStart="8sp"
+        android:layout_marginEnd="8sp"
         app:layout_constraintTop_toBottomOf="@id/accommodation_name"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/accommodation_description"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
