--- a/app/src/main/res/layout/accommodation_recyclerview.xml
+++ b/app/src/main/res/layout/accommodation_recyclerview.xml
@@ -10,13 +10,12 @@
     android:paddingBottom="20sp">
     <ImageView
         android:id="@+id/accommodation_image"
-        android:layout_width="180dp"
-        android:layout_height="180sp"
+        android:layout_width="200sp"
+        android:layout_height="200sp"
         android:layout_gravity="center"
         tools:srcCompat="@tools:sample/avatars"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="2sp"
-        android:layout_marginEnd="5sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
